tests/neg-custom-args/fatal-warnings/i11963b.scala
open abstract class Foo // error
